--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <a href="#contato" class="btn btn-success my-2">Contato</a>
           </p>
           <a href="www.linkedin.com/in/ailtonnetodev"> <i class="textoBranc icones fab fa-linkedin"></i>></a>
-          <i class="textoBranc icones fab fa-github"></i>
+          <a href="https://github.com/ailtonneto18"><i class="textoBranc icones fab fa-github"></i></a>
         </div>
       </section>
       <div class="album py-5 bg-light" id="projetos">
