--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </nav>
       <section class="jumbotron text-center corPrimaria">
         <div class="container">
-            <img class="foto-perfil" src="imagens/foto1.jpg">
+            <img class="foto-perfil" src="c:/Users/ailto/Documents/GitHub/Meu-portfolio/imagens/foto1.jpg">
           <h1 class="jumbotron-heading textoBranc">Ailton Neto</h1>
           <p class="lead textoBranc">Desenvolvedor web iniciante - Angular , Ionic, Html, Css...</p>
           <p>
