--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </nav>
       <section class="jumbotron text-center corPrimaria">
         <div class="container">
-            <img class="foto-perfil" src="https://drive.google.com/file/d/1fo08bs5G3uGeuB2XziMRlviIDw2uYUR0/view?usp=sharing">
+            <img class="foto-perfil" url="https://drive.google.com/file/d/1fo08bs5G3uGeuB2XziMRlviIDw2uYUR0/view?usp=sharing">
           <h1 class="jumbotron-heading textoBranc">Ailton Neto</h1>
           <p class="lead textoBranc">Desenvolvedor web iniciante - Angular , Ionic, Html, Css...</p>
           <p>
